fix: tiny patch for `.loadersRow` on mobile

--- a/patch/main.css
+++ b/patch/main.css
@@ -27,4 +27,5 @@
     display: flex;
     gap: 40px;
     align-items: center;
+    flex-wrap: wrap;
 }
